# egui_code

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: editor_big_file.rs  encoding_rs.rs  enum_eq.rs  puffin.rs  scroll_to_me_bug.rs  syntect.rs  tree.rs
src/: action.rs  app.rs  dev_tool.rs  font.rs  frame_history.rs  hl.rs  id.rs  images.rs  main.rs  style.rs  text.rs  ui.rs  util.rs
src/component/: file_tree.rs  menu_bar.rs  mod.rs  open_file.rs  status_bar.rs  tool_bar.rs  tree.rs
src/window/: about.rs  debug.rs  exit.rs  mod.rs  setting.rs
