[package]
name = "egui_code"
version = "0.1.0"
edition = "2021"
authors = ["lost22git"]

[dependencies]
eframe = { version = "0.21.3", features = ["dark-light", "puffin"] }
egui-notify = "0.6.0"
egui_extras = { version = "0.21.0", features = ["image", "svg"] }
image = { version = "0.24.5", features = ["png"] }
rfd = "0.11.1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.16"
puffin = "0.14.3"
puffin_http = "0.11.1"
syntect = "5.0.0"
chardetng = "0.1.17"
encoding_rs = "0.8.32"
once_cell = "1.17.1"


[profile.opt]
inherits = "release"
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
